# w1retap

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  create-w1retap-repo.sh  w1retap-0.0.7.tar.bz2  w1retap-1.0.1.tar.bz2  w1retap-1.0.2.tar.bz2  w1retap-1.0.3.tar.bz2  w1retap-1.0.4.tar.bz2  w1retap-1.0.5.tar.bz2  w1retap-1.0.6.tar.bz2  w1retap-1.0.7.tar.bz2  w1retap-1.0.9.tar.bz2  w1retap-1.1.0.tar.bz2  w1retap-1.2.0.tar.bz2  w1retap-1.2.1.tar.bz2  w1retap-1.2.2.tar.bz2  w1retap-1.2.3.tar.bz2  w1retap-1.2.4.tar.bz2  w1retap-1.2.5.tar.bz2  w1retap-1.2.6.tar.bz2  w1retap-1.2.7.tar.bz2  w1retap-1.2.8.tar.bz2  w1retap-1.2.9.tar.bz2  w1retap-1.3.0.tar.bz2  w1retap-1.3.1.tar.bz2  w1retap-1.3.3.tar.bz2  w1retap-1.3.4.tar.bz2  w1retap-1.3.5.tar.bz2  w1retap-1.3.6.tar.bz2  (+10 more)
contrib/: Makefile  Makefile.am  Makefile.in
contrib/applets/: README
contrib/applets/archserv0/w1temp/ui/: menu.xml
contrib/applets/archserv0:/: Makefile  w1temp  w1temp.vala
contrib/applets/share/w1temp/schema/: org.w1retap.w1temp.gschema.xml
contrib/applets/share/w1temp/ui/: w1temp.ui
contrib/applets/w1temp-appind/: Makefile  crsvg.vala  w1temp.vala
contrib/applets/w1temp-gnome-shell/: install.sh  readme.settings
contrib/applets/w1temp-gnome-shell/ext/: extension.js  metadata.json  stylesheet.css
contrib/applets/w1temp-gnome2/: Makefile  w1temp.c  w1temp.vala
contrib/applets/w1temp-gnome3/: Makefile  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
contrib/applets/w1temp-gnome3/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
contrib/applets/w1temp-gnome3/src/: Makefile  Makefile.am  Makefile.in  _config-w1stn-applet  org.gnome.panel.applet.w1tempAppletFactory.service  org.gnome.panel.applet.w1tempAppletFactory.service.in  org.gnome.panel.w1tempApplet.panel-applet  org.gnome.panel.w1tempApplet.panel-applet.in.in  w1temp  w1temp.c
contrib/applets/w1temp-gnome3/src/.deps/: w1temp.Po
contrib/applets/w1temp-gnome3/w1temp-0.0.5/: Makefile.am  Makefile.in  aclocal.m4  configure
contrib/applets/w1temp-gnome3/w1temp-0.0.5/autom4te.cache/: requests  traces.0  traces.1
contrib/applets/w1temp-gnome3/w1temp-0.0.5/src/: Makefile  Makefile.in  README  w1temp.c
contrib/applets/w1temp-gnome3/w1temp-0.0.5/src/.deps/: w1temp.Po
contrib/lcd4linux-patches/: README  lcd4linux-Pertelian.patch  lcd4linux-w1retap.patch
contrib/mongos/: annual-rain.rb  cwop.rb  raincalc.rb  wow.rb  wplot.rb  wug.rb  wxatom.rb  wxfeeds.rb
contrib/pipe-scripts/: README  pert-log.rb  wetbulb-snow.rb
contrib/sun_moon/: build.sh  sun_moon.c
contrib/sun_moon/moon_images/: exmoon.sh
contrib/sun_moon/sun_moon/: Makefile  lunar  lunar.c  mscript.sh  solar  solar.c  sun_moon  sun_moon.c
contrib/w1temp/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  ltmain.sh  w1temp  w1temp.c
contrib/w1temp-rpc/: Makefile  Makefile.in  README  svgt.pl  w1temp-rpc.h  w1temp.c
contrib/w1temp/.deps/: w1temp.P
contrib/w1temp/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
contrib/w1temp/curl-client/: GNOME_W1tempApplet.server.in  Makefile  Makefile.am  Makefile.in  Makefile.orig  w1temp  w1temp.c  w1temp.curl.c  w1temp.xml.c
contrib/w1temp/curl-client/.deps/: w1temp.P  w1temp.Po
contrib/w1temp/gvfs-client/: Makefile  Makefile.am  Makefile.in  w1temp  w1temp.c  w1temp.gvfs.c
contrib/w1temp/gvfs-client/.deps/: w1temp-w1temp.Po
contrib/w1temp/rpc-server/: Makefile  Makefile.am  Makefile.in  wx.cgi  wxrpc.c  wxrpc.rb
contrib/w1temp/udp-client/: GNOME_W1tempApplet.server  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  etemp  etemp.c  w1temp  w1temp.c
contrib/w1temp/udp-client/.deps/: etemp.Po  w1temp-w1temp.Po
contrib/w1temp/xmlrpc-client/: Makefile  Makefile.am  Makefile.in  bldrpc.sh  w1rpc.c  w1temp.c  w1temp.h
contrib/web/: COPYING  README  cwop.rb  mktable.sh  owm.rb  pert-log.rb  ploticus-fix.txt  raincalc.rb  svgthermo.rb  svgwind.rb  wow.rb  wplot.pl  wplot.rb  wug.rb  wx.ht.html  wx.htt.html  wx.htt.svg.div.html  wx.htt.svg.html  wx.page.html  wx.static.tmpl  wx.text.tmpl  wx.tmpl.html  wxcrop.plt  wxdefaults.css  wxfeeds.rb
contrib/web/.svn/: entries
contrib/web/.svn/text-base/: wxcrop.plt.svn-base  wxrss.pl.svn-base
contrib/web/old/: wplot.pl  wug.pl  wxfeeds.pl  wxrss.pl
contrib/wxrpc/: Makefile  Makefile.in
docs/: .~lock.w1retap.odt#  README  README.tstfind  README.udev  README.usb  daria.co.uk-multi.sql  daria.co.uk-single.sql  daria.co.uk.sql  ds2490  ds2490.usermap  fixdate.rb  fixpr.rb  fixsensors.sh  manual.html  meteo-sensors.csv  mkpg.pl  mksens.sql  mksenst-mysql.sql  mksenst.sql  mongo-c-ipv6.dif  pert-log.rb  platforms.txt  readme.mongodb  sample.txt  w1retap.odt  w1retap.xhtml  w1sensors.rb  zlatograd.com.sql
docs/.svn/: entries
docs/systemd/: README
docs/systemd/etc/systemd/system/: w1retap.service
docs/systemd/etc/tmpfiles.d/: w1retap.conf
docs/systemd/scripts/: add_w1retap_user.sh  addpsqluser.sh
m4/.svn/: entries
src/: Makefile.am  Makefile.in  sensors.sql  w1conf.c  w1csv.c  w1file.c  w1retap.c  w1retap.h  w1sensors.c  w1util.c  w1xml.c
src/libusblinux300/: Makefile.am  Makefile.in  README  ReadMe.txt  acquire.c  atod20.c  atod20.h  atod26.c  atod26.h  atodtst  atodtst.c  braybaro.c  cnt1d.c  cnt1d.h  counter  counter.c  coupler  coupler.c  crcutil.c  debit  debitvm  devlist.h  ds192x.c  ds192x.h  ds192x.old.c  ds2408lcd.c  ds2408lcd.old.c  ds2408lcd.xx.c  ds2760.c  ds2760.h  fish  fish.c  gethumd  gethumd.c  hbht.c  hbht.h  hbhttest.c  hbuv.c  hbuv.h  hbuvtest.c  (+142 more)
src/mongo/: Makefile.am  Makefile.in  mktest.sh  w1mongo.c
src/mysql/: Makefile.am  Makefile.in  w1mysql.c
src/odbc/: Makefile.am  Makefile.in  w1odbc.c
src/pgsql/: Makefile.am  Makefile.in  mktest.sh  w1pgsql.c
src/sqlite/: Makefile.am  Makefile.in  mktest.sh  w1sqlite.c
(+3 files in other folders)
