EXTRA_DIST=$(wildcard *.c) $(wildcard *.h) makefile.orig README ReadMe.txt

noinst_LIBRARIES = libowfat.a

libowfat_a_SOURCES = libusbllnk.c     \
	libusbds2490.c libusbnet.c libusbses.c    \
	libusbtran.c owerr.c ioutil.c	     \
	crcutil.c mbappreg.c mbeprom.c	     \
	mbnvcrc.c mbscrcrc.c mbscrex.c	     \
	mbshaee.c mbee.c mbee77.c mbnv.c \
	mbscr.c mbscree.c mbscrx77.c		     \
	mbsha.c pw77.c rawmem.c owfile.c \
	owpgrw.c owprgm.c owcache.c		     \
	temp10.c atod26.c screenio.c		     \
	cnt1d.c swt12.c pressure.c
